--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 
 
 body{
-  background-color: black;
+  background-color: transparent;
   box-sizing: border-box;
   
 }
@@ -33,8 +33,6 @@ body{
 
 }
 
-[data-scroll-container] {
-  overflow: hidden;
-}
+
 
 
