fixed the scrolling animations

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 
 
 body{
-  background-color: transparent;
+  background-color: #F1F1F1;
   box-sizing: border-box;
   
 }
@@ -32,6 +32,7 @@ body{
   @apply translate-y-[-100%] 
 
 }
+
 
 
 
